--- a/contact.html
+++ b/contact.html
@@ -1,44 +1,58 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact</title>
+  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="/styles/form.css">
 </head>
+
 <body>
-  <nav>
-    <ul>
-      <li>
-        <a href="/index.html">Accueil</a>
-      </li>
-      <li>
-        <a href="/albums.html">Albums</a>
-      </li>
-      <li>
-        <a href="/contact.html">Contact</a>
-      </li>
-    </ul>
+  <nav id="main-navbar">
+    <div class="container">
+      <ul>
+        <li>
+          <span class="nav-link nav-brand">Dr. Peacock</span>
+        </li>
+        <li>
+          <a class="nav-link" href="/index.html">Accueil</a>
+        </li>
+        <li>
+          <a class="nav-link" href="/albums.html">Albums</a>
+        </li>
+        <li>
+          <a class="nav-link" href="/contact.html">Contact</a>
+        </li>
+      </ul>
+    </div>
   </nav>
 
-  <h1>Contact</h1>
+  <div class="container">
+    <h1>Contact</h1>
 
-  <form action="" method="post">
-    <div>
-      <label for="email">Adresse email :</label>
-      <input type="email" name="email" id="email">
-    </div>
+    <form class="form" action="" method="post">
+      <div class="form-group">
+        <label for="email">Adresse email :</label>
+        <input type="email" name="email" id="email">
+      </div>
 
-    <div>
-      <label for="subject">Object :</label>
-      <input type="text" name="subject" id="subject">
-    </div>
+      <div class="form-group">
+        <label for="subject">Object :</label>
+        <input type="text" name="subject" id="subject">
+      </div>
 
-    <div>
-      <label for="content">Votre message :</label>
-      <textarea name="content" id="content"></textarea>
-    </div>
+      <div class="form-group">
+        <label for="content">Votre message :</label>
+        <textarea name="content" id="content" rows="6"></textarea>
+      </div>
 
-    <button type="submit">Envoyer</button>
-  </form>
+      <div class="form-actions">
+        <button class="btn" type="submit">Envoyer</button>
+      </div>
+    </form>
+  </div>
 </body>
+
 </html>
