--- a/index.html
+++ b/index.html
@@ -4,27 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dr. Peacock</title>
+  <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
-  <nav>
-    <ul>
-      <li>
-        <a href="/index.html">Accueil</a>
-      </li>
-      <li>
-        <a href="/albums.html">Albums</a>
-      </li>
-      <li>
-        <a href="/contact.html">Contact</a>
-      </li>
-    </ul>
+  <nav id="main-navbar">
+    <div class="container">
+      <ul>
+        <li>
+          <span class="nav-link nav-brand">Dr. Peacock</span>
+        </li>
+        <li>
+          <a class="nav-link" href="/index.html">Accueil</a>
+        </li>
+        <li>
+          <a class="nav-link" href="/albums.html">Albums</a>
+        </li>
+        <li>
+          <a class="nav-link" href="/contact.html">Contact</a>
+        </li>
+      </ul>
+    </div>
   </nav>
 
-  <h1>Dr. Peacock</h1>
-  <img src="https://i.scdn.co/image/ab6761610000517438354a921fabe908436bfe65" alt="Image de profil de l'artiste.">
-
-  <p>
-    Frenchcore is my passion. 200+ bpm music with emotion. Musicians & hard kicks! That’s what I love. And I will never stop spending all my time to give you the best possible experience! #frenchcoreworldwide
-  </p>
+  <div class="container">
+    <h1>Dr. Peacock</h1>
+    <img src="https://i.scdn.co/image/ab6761610000517438354a921fabe908436bfe65" alt="Image de profil de l'artiste.">
+  
+    <p>
+      Frenchcore is my passion. 200+ bpm music with emotion. Musicians & hard kicks! That’s what I love. And I will never stop spending all my time to give you the best possible experience! #frenchcoreworldwide
+    </p>
+  </div>
 </body>
 </html>
